@@ -5,6 +5,7 @@ trunk
 * added "omxCreateMatrix" method for MxMatrix objects
 * renaming majority of omx* functions to imx* functions. See http://openmx.psyc.virginia.edu/thread/761
 * added error checking to mxOption() function
+* added "Optimality tolerance" to mxOption() selection
 
 Pre-Release 999.0.0-1527 (January 6, 2011)
 ==========================================
